# gspot_fastapi_auth

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt
example/: main.py  tests.py
src/gspot_fastapi_auth/: __init__.py  auth.py  base.py  models.py  permissions.py  providers.py  services.py  settings.py  test_factory.py
tests/: tests.py
